<resources>
    <string name="app_name">TutorCafe</string>
    <string name="strTitPrincipal">Bienvenidos</string>
    <string name="strTitSecundario">Tutor Cafe</string>
    <string name="strSeccion1">1. Sección 1.</string>
    <string name="strSeccion2">2. Sección 2.</string>
    <string name="strSeccion3">3. Sección 3.</string>
    <string name="strHora1">10:00 am.</string>
    <string name="strHora2">4:00 pm.</string>
    <string name="strHora3">7:00 pm.</string>
</resources>
