<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nextu.camc.tutorcafe.actPrincipal"
    android:background="#4E342E">

    <ImageView
        android:id="@+id/imgCafe"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/imgcafe"
        android:scaleType="centerCrop"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strTitPrincipal"
        android:textSize="34sp"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/txtSecundario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strTitSecundario"
        android:textSize="34sp"
        android:textColor="@android:color/white"
        android:layout_alignBottom="@id/imgCafe"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/txtSeccion1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgCafe"
        android:text="@string/strSeccion1"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:paddingTop="30dp"
        android:paddingLeft="16dp"
        android:paddingBottom="16dp"/>
    <TextView
        android:id="@+id/txtSeccion2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtSeccion1"
        android:text="@string/strSeccion2"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:padding="16dp"/>
    <TextView
        android:id="@+id/txtSeccion3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtSeccion2"
        android:text="@string/strSeccion3"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:padding="16dp"/>
    <TextView
        android:id="@+id/txtHora1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strHora1"
        android:layout_below="@id/imgCafe"
        android:layout_alignParentRight="true"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:paddingTop="30dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"/>
    <TextView
        android:id="@+id/txtHora2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtHora1"
        android:layout_alignParentRight="true"
        android:text="@string/strHora2"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:padding="16dp"
        />
    <TextView
        android:id="@+id/txtHora3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtHora2"
        android:layout_alignParentRight="true"
        android:text="@string/strHora3"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:padding="16dp"/>

</RelativeLayout>
